5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1103.log
== TEST (2019-05-01 14:10:37) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas a e b invalidas")
elif(a<=x)and(x<=b):
	print("x pertence ao intervalo a, b")
elif(x<=a)and(x>=b):
	print("x nao pertence ao intervalo a, b" )

-- OUTPUT:
420.0  extras e 20.0  de falta
R$  500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:13:17) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" a "e" b "invalidas")
elif(a<=x)and(x<=b):
	print(x "pertence ao intervalo" a, b)
elif(x<=a)and(x>=b):
	print(x "nao pertence ao intervalo" a, b )

-- ERROR:
File "XXXX", line 6
    print("Entradas" a "e" b "invalidas")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:16:26) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" ,a, "e" ,b, "invalidas")
elif(a<=x)and(x<=b):
	print(,x, "pertence ao intervalo" ,a, b,)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a, b )

-- ERROR:
File "XXXX", line 8
    print(,x, "pertence ao intervalo" ,a, b,)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:18:22) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" ,a, "e" ,b, "invalidas")
elif(a<=x)and(x<=b):
	print(,x, "pertence ao intervalo" ,a,"," b)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a,"," b)

-- ERROR:
File "XXXX", line 8
    print(,x, "pertence ao intervalo" ,a,"," b)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:18:39) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" ,a, "e" ,b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" ,a,"," b)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a,"," b)

-- ERROR:
File "XXXX", line 8
    print(x, "pertence ao intervalo" ,a,"," b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:18:49) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" ,a, "e" ,b, "invalidas")
elif(a<=x)and(x<=b):
	print(x "pertence ao intervalo" ,a,"," b)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a,"," b)

-- ERROR:
File "XXXX", line 8
    print(x "pertence ao intervalo" ,a,"," b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:22:00) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" ,a, "e" ,b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" ,a,"," b)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a,"," b)

-- ERROR:
File "XXXX", line 8
    print(x, "pertence ao intervalo" ,a,"," b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:26:54) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)and(x>=b):
	print(,x, "nao pertence ao intervalo" ,a,"," b)

-- ERROR:
File "XXXX", line 10
    print(,x, "nao pertence ao intervalo" ,a,"," b)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:27:35) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)and(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- ERROR:
File "XXXX", line 10
    print(,x, "nao pertence ao intervalo" ,a,"," b)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:28:08) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)and(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- EXECUTION TIME:
0.19951
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:28:23) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)and(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- ERROR:
File "XXXX", line 10
    print(,x, "nao pertence ao intervalo" ,a,"," b)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:30:33) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)or(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)or(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- OUTPUT:
2.0 pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:30:54) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)or(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)or(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- EXECUTION TIME:
0.170925
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:31:18) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)or(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:31:36) 
-- CODE:
x=float(input("num1: "))
a=float(input("num2: "))
b=float(input("num3: "))

if(b<=a):
	print("Entradas" , a, "e" , b, "invalidas")
elif(a<=x)and(x<=b):
	print(x, "pertence ao intervalo" , a,",", b)
elif(x<=a)or(x>=b):
	print(x, "nao pertence ao intervalo" , a,",", b)

-- EXECUTION TIME:
0.143792
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
